kubernetes/gatekeeper/constraint-templates/block-privileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockprivileged

        import future.keywords.if

        violation[{"msg": msg}] if {
            container := input.review.object.spec.template.spec.containers[_]
            container.securityContext.privileged == true
            msg := sprintf(
                "Container '%v' must not run in privileged mode",
                [container.name]
            )
        }
