kubernetes/gatekeeper/constraint-templates/require-non-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirenonroot
  annotations:
    description: Requires containers to not run as root.
spec:
  crd:
    spec:
      names:
        kind: K8sRequireNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirenonroot

        import future.keywords.if

        violation[{"msg": msg}] if {
            container := input.review.object.spec.template.spec.containers[_]
            not container.securityContext.runAsNonRoot
            msg := sprintf(
                "Container '%v' must set runAsNonRoot: true",
                [container.name]
            )
        }

        violation[{"msg": msg}] if {
            container := input.review.object.spec.template.spec.containers[_]
            container.securityContext.runAsUser == 0
            msg := sprintf(
                "Container '%v' must not run as UID 0 (root)",
                [container.name]
            )
        }
